# MedCalc-Bench-Verified

./: .gitignore  README.md  pyproject.toml
calculator_implementations/: apache_ii.py  calc_path.json  caprini_score.py  cci.py  child_pugh_score.py  ckd-epi_2021_creatinine.py  framingham_risk_score.py  generate_csv.py  name_to_python.json  synthesize_patient_note.py  weight_conversion.py
datasets/: one_shot_data.csv
evaluation/: generate_code_prompt.py  llm_inference.py  one_shot_finalized_explanation.json  run.py  table_stats.py
